Mudando o banco de dados para SQL Server.

--- a/Back/src/ProEventos.API/appsettings.json
+++ b/Back/src/ProEventos.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=RONIEL-PC\\SQLEXPRESS;Initial Catalog=PROEVENTOS;Integrated Security=True"
+  }
 }
