Seção 12: AspNet Core Identity - P3 - Criando o Novo Banco de Dados.

--- a/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <Compile Include="Migrations\20210803222713_Initial.cs" />
     <Compile Include="Migrations\20210803222713_Initial.Designer.cs" />
+    <Compile Include="Migrations\20210814005606_IdentityMigration.cs" />
+    <Compile Include="Migrations\20210814005606_IdentityMigration.Designer.cs" />
     <Compile Include="Migrations\ProEventosContextModelSnapshot.cs" />
   </ItemGroup>
 
