--- a/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -11,10 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Migrations\20210803222713_Initial.cs" />
-    <Compile Include="Migrations\20210803222713_Initial.Designer.cs" />
-    <Compile Include="Migrations\20210814005606_IdentityMigration.cs" />
-    <Compile Include="Migrations\20210814005606_IdentityMigration.Designer.cs" />
+    <Compile Include="Migrations\20210904185643_initial.cs" />
+    <Compile Include="Migrations\20210904185643_initial.Designer.cs" />
     <Compile Include="Migrations\ProEventosContextModelSnapshot.cs" />
   </ItemGroup>
 
@@ -23,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
